# YASR

./: .gitignore  .gitmodules  README.md  create_new.py  pyproject.toml  yasr.py
AoC/2021/: 16.py
aoc/2021/: 16.py
aoc/2022/: 1.py  10.py  2.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py
aoc/2023/: 1.py  19.py  2.py  3.py  4.py  5.py  6.py  7.py  8.py  problem_8_graph.dot
aoc/2024/: 1.py  2.py  3.py  4.py  5.py
aoc/aoc/: _api.py
aoc/aoc_api/: _api.py
leetcode/: 1047.py  1143.py  118.py  1235.py  1833-maximum-ice-cream-bars.py  189.cpp  1926.py  198.py  2042.py  209.py  21.py  2125.py  2142.py  217.py  2225.py  224.py  26.py  263.cpp  263.py  283.cpp  295.py  328.py  383.py  53.py  542.py  57.py  587.py  70.cpp  70.py  704.py  733.py  79.py  841-keys-and-rooms.py  931.py  runner.py
