[tool.poetry]
name = "yasr"
version = "0.1.0"
description = ""
authors = ["p0lygun <solankivibhakar82@gmail.com>"]
readme = "README.md"
packages = [
    { include = "aoc_api", from = "aoc" },
]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
numpy = "^1.26.2"
networkx = {extras = ["default"], version = "^3.2.1"}
pygraphviz = "^1.11"
cairosvg = "^2.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
